--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.profiles.active=test
 
 default.sender=edson.ass@gmail.com
 default.reciptent=edson.ass@gail.com
+
+
+jwt.secret = SequenciaDecarateresParaEmbaralharToken
+jwt.expiration = 6000
